# wenmei

./: .gitignore  AGENTS.md  CLAUDE.md  CONTEXT_COMPACT.md  CROSS_PLATFORM_FILE_ASSOC_DEBRIEF.md  DEV_PLAN.md  MARKDOWN_WORKSPACE_SPEC.md  PLATFORM_STRATEGY.md  README.md  design-contract.yaml  eslint.config.js  hello-world.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
.agents-playbook/: SKILL.md  playbook.yaml
.pi/: sandbox-map.yaml
.wenmei/: journal.jsonl  vault.json
Wenmei/: Test.md  hello-world.md
app_design/: .gitignore  README.md  design-contract.yaml  index.html  info.md  package-lock.json  package.json  tailwind.config.js  vite.config.ts
docs/: CI_CD.md  DEV_PLAN.md  MARKDOWN_WORKSPACE_SPEC.md  PACKAGING.md  SANDBOX_HARNESS.md  first_run_onboarding.md  inline-ai-selection.md  onboarding_design_spec.md  os_install_script.txt  refactor_plan.md  revamp-phase-improvement-plan-04Jul2026.md  sandbox_workflow_troubleshooting.md  settings_design_spec.md
landing/: content-update-proposal.md  index.html
memory/: 2026-07-08.md
scripts/: build-dmg-mac.sh  build-linux-wsl.ps1  install-cli.sh  install-finder-service.sh  install-quicklook.sh  install.sh  reset-state.sh  uninstall-linux.sh  wenmei  (+5 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: approval.rs  cli.rs  control.rs  file_ops.rs  heartbeat.rs  journal.rs  logging.rs  main.rs  narration.rs  nightshift.rs  pi_rpc.rs  polling.rs  review.rs  search.rs  state.rs  terminal.rs  updater.rs  vault.rs  window.rs
src-tauri/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/templates/: Cosmos_Discover.md  Welcome.md  Wenmei.desktop  deb-postinstall.sh  rpm-postinstall.sh
(+118 files in other folders)
