[package]
name = "wenmei"
version = "0.1.0"
description = "A quiet markdown workspace"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = [] }
tauri-plugin-shell = "2.0.0-rc"
tauri-plugin-dialog = "2.0.0-rc"
tauri-plugin-fs = "2.0.0-rc"
tauri-plugin-notification = "2.0.0-rc"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
walkdir = "2"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
portable-pty = "0.9.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
